2013-08-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  More efficient zeroing of bytes, more efficient addition of constants, fix handling of a in pointer set.

2013-08-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: install/uninstall stm8 related files

2013-08-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Smaller code for GET_VALUE_AT_ADDRESS and signed casts.

2013-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient mixed-size addition of on-stack operands, and assignment to parts of x and y.
	* support/regression/tests/bug-136564.c,
	  support/regression/tests/bug3521024.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c:
	  Disable tests affected by bug ##2196, 2198.
	* support/regression/tests/float_single.c:
	  Disable failing sinf, cosf tests.
	* src/stm8/peeph.def:
	  Tail call optimization.

2013-07-30 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/*: sync with binutils 2.23.2

2013-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def,
	  src/stm8/gen.c:
	  Enable peepholes for inverse jumps, and labels, fix label reference counting bug #2183.

2013-07-29 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/sdcpp-diagnostic.c, upport/cpp/sdcpp-opts.c: fixed bug
	  #2194 Missing header file produces error, but still zero exit status

2013-07-27 Leland Morrison <enigmalee AT sourceforge.net>

	* sdas/linksrc/lkrloc3.c:
	  prevent NULL ptr dereference when generating error message
	  (fixes bug #2076 core dump from sdldz80
	   if relative jump exceeds range)

2013-07-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Enable peephole for jp to jra optimization.

2013-07-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug-927659.c,
	  support/regression/tests/bug1057979.c,